--- a/ExercícioHtml1-joy/Tabelas.html
+++ b/ExercícioHtml1-joy/Tabelas.html
@@ -6,6 +6,78 @@
     <title>Tabelas</title>
 </head>
 <body>
-    
+    <table border="1">
+        <tr>
+            <td colspan="3">Tabela</td>
+        </tr>
+
+        <tr>
+            <td>0</td>
+            <td>0</td>
+            <td>0</td>
+        </tr>
+
+        <tr>
+            <td>0</td>
+            <td>0</td>
+            <td>0</td>
+        </tr>
+
+    </table>
+
+    <br>
+
+    <table border="1">
+        <tr>
+            <td rowspan="3">00</td>
+        </tr>
+
+        <tr>
+            <td>0</td>
+            <td>0</td>
+            <td>0</td>
+        </tr>
+
+        <tr>
+            <td>0</td>
+            <td>0</td>
+            <td>0</td>
+        </tr>
+
+    </table>
+
+    <br>
+
+    <table border="1">
+        <tr>
+            <td colspan="5">0</td>
+        </tr>
+
+        <tr>
+            <td rowspan="4">0</td>
+            <td>0</td>
+            <td>0</td>
+            <td>0</td>
+            <td>0</td>
+        </tr>
+
+        <tr>
+            <th>0</th>
+            <th>0</th>
+            <th rowspan="2">0</th>
+            <th>0</th>
+        </tr>
+        <tr>
+            <th>0</th>
+            <th>0</th>
+            <th>0</th>
+        </tr>
+        <tr>
+            <th>0</th>
+            <th colspan="2">0</th>
+            <th>0</th>
+        </tr>
+
+    </table>
 </body>
 </html>
