--- a/SA-1/pagina_cadastro.html
+++ b/SA-1/pagina_cadastro.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <style>
-        /* Estilos adicionais para a página de cadastro */
+        /* Estilos para a Página de Cadastro */
         .container-cadastro {
             display: flex;
             justify-content: center;
