--- a/SA-1/index.html
+++ b/SA-1/index.html
@@ -8,19 +8,34 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
-
     <header>
+
         <img src="https://loja.senaies.com.br/static/media/SenaiLogoBranco.d0fd9b85.svg" alt="Logo" class="logo">
+        
+        <div class="menu-hamburguer" onclick="toggleMenu()">
+            <div></div>
+            <div></div>
+            <div></div>
+        </div>
+
+        <nav class="nav-mobile">
+            <a href="#cursos">CURSOS</a>
+            <a href="#sobre-nos">SOBRE-NÓS</a>
+            <a href="#cadastre-se">CADASTRE-SE</a>
+        </nav>
+
         <nav>
             <a href="#cursos" class="botao">CURSOS</a>
             <a href="pagina_sobre_nos.html" class="botao sobre-nos">SOBRE-NÓS</a>
             <a href="pagina_cadastro.html" class="botao cadastre-se">CADASTRE-SE</a>
         </nav>
+
         <div class="icones">
             <i class="fas fa-user"></i>
             <i class="fas fa-heart"></i>
             <i class="fas fa-shopping-cart"></i>
         </div>
+
     </header>
 
     <main>
@@ -102,6 +117,3 @@
 
 </body>
 </html>
-
-
-
