--- a/Aula13JS/cadastro.html
+++ b/Aula13JS/cadastro.html
@@ -12,16 +12,16 @@
 <body>
     <div id="caixa">
         <span class="material-symbols-outlined">
-            login
+            person_add
             </span>
         <h1>LOGIN</h1>
         <form>
             <input type="text" placeholder="Usuário" id="inputUsuario" class="inputForm">
-            <input type="text" placeholder="Usuário" id="inputUsuario" class="inputForm">
             <input type="password" placeholder="Senha" id="inputSenha" class="inputForm">
+            <input type="password" placeholder="Confirme Senha" id="inputConfirmeSenha" class="inputForm">
             <input type="submit" value="Entrar" id="inputEntrar" class="inputForm" onclick="logar()">
         </form>
-        <p> Não possui conta? <a href="cadastro.html">Cadastre-se</a></p>
+        <p> Não possui conta? <a href="index.html">Login</a></p>
     </div>
 </body>
 <script src="script.js"></script>
